--- a/views/userHome.hbs
+++ b/views/userHome.hbs
@@ -1,5 +1,34 @@
-<center>
-<h1> Welcome Back {{username}}!!!</h1>
+<div class='header'>
+	<div class='welcome'> Welcome Back {{username}}!!! </div>
+	<div class='edit'> <a href='/editProfile'>Edit Profile</a></div>
+</div>
+{{!Self-Reminder: Work on header class so text does not overlap and to change the link color}}
 
+<div class='sidebarBody'>
+	<ul class='sidebarUL'>
+		<li><a href='#Top'>Today's Matches</a></li>
+		<li><a href='#blog'>Blog</a></li>
+		<li><a href='#matchHistory'>Match History</a></li>
+		<li><a href='#critiques'>Critiques</a></li>
+	</ul>
+</div>
 
-</center>
+<div class='userHomeBlog'>
+	<div id='todayMatch'> 
+		<h1> Your Matches For Today! </h1>
+		<p> Happy Hunting! </p> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	</div>
+	<div id='blog'> 
+		<h1> Your Most Recent Blog Posts </h1>
+		<p> Keep people updated about your "exciting" life </p> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	</div>
+	<div id='matchHistory'>
+		<h1> The People You Matched With In The Past" </h1>
+		<p> Stay in touch! </p> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	</div>
+	<div id='critiques'>
+		<h1> How People Saw You *Spooky* </h1>
+		<p> Good luck friend </p> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	</div>	
+</div>
+
