Implemented the make and edit profile based on new user or already a user

--- a/views/userHome.hbs
+++ b/views/userHome.hbs
@@ -1,6 +1,9 @@
 <div class='header'>
 	<div class='welcome'> Welcome Back {{username}}!!! </div>
-	<div class='edit'> <a href='/editProfile'>Edit Profile</a></div>
+	<div class='edit'>
+		<a href='/editProfile'><button type='button'>Edit Profile</button></a>
+		<a href='/logout'><button type='button'>Logout</button></a>
+	</div>
 </div>
 {{!Self-Reminder: Work on header class so text does not overlap and to change the link color}}
 
