--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,7 @@
 <center>
 <h1> PROFILE SUBMIT </h1>
 </center>
-
+{{slug}}
 <h2> I will fix the repeat values, need to change from a each loop to something else </h2>
 {{#each users as |user|}}
 	<h1>{{user.title}}!! </h1> (<a href='/profile'>Profile Submit</a>)
