Updated pages, working on multiple slugs

--- a/views/editProfile.hbs
+++ b/views/editProfile.hbs
@@ -5,7 +5,7 @@
 
 {{#each users}}
 	Username: {{this.username}} <br>
-	<a href='{{this.slug}}'>Information</a> <br><br>
+	<a href='{{this.username}}'>Information</a> <br><br>
 {{/each}}
 
 <form method='POST' action=''>
