Working on: implementing promises to properply add the user info to the liked or disliked array of the User schema

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,6 +13,6 @@
 <div id='core'>
 	<a href='/todaysMatches'><button type='button'>Matches</button></a>
 	<a href='/connectedMatches'><button type='button'>Connected Matches</button></a>
-	<a href='/critiques'><button type='button'>Critiques</button></a>
+	<a href='/reviews'><button type='button'>Reviews</button></a>
 	<a href='/met'><button type='button'>Met in Public</button></a>
 </div>
