--- a/views/todaysMatches.hbs
+++ b/views/todaysMatches.hbs
@@ -13,6 +13,11 @@
     </form>
 </div>
 
+{{#if notMatchedYed}}
+    {{#each notMatchedYet}}
+        {{this.username}} <br>
+    {{/each}}
+{{/if}}
 <div id='revealPerson'>
-    <p> Hi </p>
+    <p> Who will you match with?? </p>
 </div>
