--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,18 +1,49 @@
-<h1> Home </h1> 
-<div id='homeHeader'>
-	<h2> LOGO </h2>
-	Welcome Back {{username}}!!! <br>
-	<a href='/home'><button type='button'>Home</button></a>
-	<a href='/map'><button type='button'>Map</button></a>
-	<a href='/about'><button type='button'>About</button></a>
-	<a href='/contact'><button type='button'>Contact</button></a>
-	<a href='/profile'><button type='button'>Edit Profile</button></a>
-	<a href='/logout'><button type='button'>Logout</button></a>	
-</div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/home">Home</a>
+    </div>
 
-<div id='core'>
-	<a href='/todaysMatches'><button type='button'>Matches</button></a>
-	<a href='/connectedMatches'><button type='button'>Connected Matches</button></a>
-	<a href='/reviews'><button type='button'>Reviews</button></a>
-	<a href='/met'><button type='button'>Met in Public</button></a>
-</div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/about">About <span class="sr-only">(current)</span></a></li>
+        <li><a href="/map">Map</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Match <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/todaysMatches">Todays Matches</a></li>
+            <li><a href="/connectedMatches">Connections</a></li>
+            <li><a href="/met">History</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/reviews">Reviews</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="navbar-form navbar-left">
+        <div class="form-group">
+            Welcome Back {{username}}! 
+        </div>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/contact">Contact</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{username}} <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/profile">Edit Profile</a></li>
+            <li><a href="/logout">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<h1> Home </h1> 
