--- a/views/notmatch.hbs
+++ b/views/notmatch.hbs
@@ -1,1 +1,48 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/home">Home</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/about">About <span class="sr-only">(current)</span></a></li>
+        <li><a href="/map">Map</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Match <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/todaysMatches">Todays Matches</a></li>
+            <li><a href="/connectedMatches">Connections</a></li>
+            <li><a href="/met">History</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/reviews">Reviews</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="navbar-form navbar-left">
+        <div class="form-group">
+            Welcome Back {{username}}! 
+        </div>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/contact">Contact</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{username}} <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/profile">Edit Profile</a></li>
+            <li><a href="/logout">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 <h1> I guess not the one for you </h1>
